--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <div class="navbar">
             <li>
-                <a class="bar" href="portfolio.html">Home</a>
+                <a class="bar" href="index.html">Home</a>
 
                 <a class="bar" href="about.html">About</a>
                 <a class="bar" href="skill.html">Skills</a>
