--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
     <div style="padding-right: 10rem;padding-left: 10rem; padding-top: 10rem;">
         <div class="content">
             <h2>Contact Me</h2>
-            <h4 style="font-style: italic; padding-top: 2rem;padding-bottom: 3rem;"> Fell free to get in touch</h4>
+            <h4 style="font-style: italic; padding-top: 2rem;padding-bottom: 3rem;"> Feel free to get in touch</h4>
             <h5>
                 On the off chance that you might want to connect with me, don't hesitate to send me an email at <a href="shivangisahu@gmail.com" style="color: cadetblue;">shivangisahu0317@gmail.com</a>
             </h5>
