--- a/skill.html
+++ b/skill.html
@@ -124,7 +124,7 @@
         <!--img src="logo.png" alt="" style="width: 3%;"-->
         <div class="navbar">
             <li>
-                <a class="bar" href="portfolio.html">Home</a>
+                <a class="bar" href="index.html">Home</a>
 
                 <a class="bar" href="about.html">About</a>
                 <a class="bar" href="skill.html">Skills</a>
